log
Thu Apr 16 08:04:41 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
ce4b97b
Thu Apr 16 08:32:43 PM UTC 2026: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: too few arguments to function ‘hash’
   62 |     long pos = hash(key) % map->capacity;
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:63:62: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   63 |     while (map->buckets[pos] != NULL && is_equal(map->buckets->key, key) == 0) {
      |                                                              ^~
      |                                                  (*          )
hashmap.c:66:22: error: ‘i’ undeclared (first use in this function)
   66 |     if (map->buckets[i] == NULL) {
      |                      ^
hashmap.c:66:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:68:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   68 |         map->hashArray[pos] = newPair;
      |            ^~
hashmap.c:72:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   72 |         map->hashArray[pos]->value = value;
      |            ^~
5cf54a5
Thu Apr 16 08:33:00 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: too few arguments to function ‘hash’
   62 |     long pos = hash(key) % map->capacity;
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:63:62: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   63 |     while (map->buckets[pos] != NULL && is_equal(map->buckets->key, key) == 0) {
      |                                                              ^~
      |                                                  (*          )
hashmap.c:68:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   68 |         map->hashArray[pos] = newPair;
      |            ^~
hashmap.c:72:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   72 |         map->hashArray[pos]->value = value;
      |            ^~
9436123
Thu Apr 16 08:34:03 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:62: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   63 |     while (map->buckets[pos] != NULL && is_equal(map->buckets->key, key) == 0) {
      |                                                              ^~
      |                                                  (*          )
hashmap.c:68:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   68 |         map->hashArray[pos] = newPair;
      |            ^~
hashmap.c:72:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   72 |         map->hashArray[pos]->value = value;
      |            ^~
02afad1
Thu Apr 16 08:34:59 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:62: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   63 |     while (map->buckets[pos] != NULL && is_equal(map->buckets->key, key) == 0) {
      |                                                              ^~
      |                                                  (*          )
9acdae5
Thu Apr 16 08:36:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
b61ad47
Thu Apr 16 08:59:42 PM UTC 2026: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
8c91c82
Thu Apr 16 09:00:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
1538392
Thu Apr 16 09:01:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
ca017ac
Sat Apr 18 04:54:12 AM UTC 2026: 
 tests:  5|4
total_score: 20/60
1e3fa2e
Sat Apr 18 05:55:09 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 20/60
ec61f3c
Sat Apr 18 05:56:45 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
52a4d02
Sat Apr 18 06:10:30 AM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
d3efea7
Sat Apr 18 06:17:33 AM UTC 2026: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
30a3dda
Sat Apr 18 06:18:13 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 40/60
4ae1dcd
Sat Apr 18 06:19:15 AM UTC 2026: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  12|2
total_score: 40/60
0e3895a
Sat Apr 18 06:20:49 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
b86d71c
Sat Apr 18 06:41:30 AM UTC 2026: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 40/60
ec3e6b3
Sat Apr 18 06:50:44 AM UTC 2026: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘nextMap’:
hashmap.c:137:5: error: statement with no effect [-Werror=unused-value]
  137 |     for (pos ; pos < map->capacity ; pos++) {
      |     ^~~
cc1: all warnings being treated as errors
a03da42
Sat Apr 18 06:51:17 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘nextMap’:
hashmap.c:137:5: error: statement with no effect [-Werror=unused-value]
  137 |     for (pos ; pos < map->capacity ; pos++) {
      |     ^~~
cc1: all warnings being treated as errors
00bd783
Sat Apr 18 06:54:47 AM UTC 2026: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 40/60
8ac103b
Sat Apr 18 07:01:52 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 50/60
3814888
Sun Apr 19 08:06:21 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:163:5: error: unknown type name ‘hashMap’; did you mean ‘HashMap’?
  163 |     hashMap * newMap = createMap(map->capacity * 2);
      |     ^~~~~~~
      |     HashMap
hashmap.c:163:24: error: initialization of ‘int *’ from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Wincompatible-pointer-types]
  163 |     hashMap * newMap = createMap(map->capacity * 2);
      |                        ^~~~~~~~~
hashmap.c:166:25: error: request for member ‘buckets’ in something not a structure or union
  166 |         insertMap(newMap->buckets, old_buckets[i]->key, old_buckets[i]->value);
      |                         ^~
1e8a3f8
Sun Apr 19 08:07:01 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:166:25: error: passing argument 1 of ‘insertMap’ from incompatible pointer type [-Wincompatible-pointer-types]
  166 |         insertMap(newMap->buckets, old_buckets[i]->key, old_buckets[i]->value);
      |                   ~~~~~~^~~~~~~~~
      |                         |
      |                         Pair **
hashmap.c:67:26: note: expected ‘HashMap *’ {aka ‘struct HashMap *’} but argument is of type ‘Pair **’
   67 | void insertMap(HashMap * map, char * key, void * value) {
      |                ~~~~~~~~~~^~~
a7cb7d0
